[gd_scene load_steps=4 format=3 uid="uid://dqbmb2jv4fom1"]

[ext_resource type="Texture2D" uid="uid://cdn6ljy3361fe" path="res://images/geometrydash.jpg" id="1_e5yfe"]
[ext_resource type="Script" path="res://time_machine.gd" id="1_ms6vp"]
[ext_resource type="Texture2D" uid="uid://bfxiuw7v6mr7x" path="res://images/battery icon.jpg" id="3_6usk3"]

[node name="timeMachine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ms6vp")

[node name="geoDash" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0
texture = ExtResource("1_e5yfe")
expand_mode = 1

[node name="Battery" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.236979
anchor_top = 0.0123457
anchor_right = 0.733507
anchor_bottom = 0.895062
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_6usk3")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 7.0
offset_right = 672.0
offset_bottom = 120.0
text = "charge
"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button2" type="Button" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 422.0
offset_top = 178.0
offset_right = 736.0
offset_bottom = 409.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
